basics-ingress/ingress.yml
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: example-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
        - path: /hello
          pathType: Prefix
          backend:
            service:
              name: kubee-backend
              port: 
                number: 8080
        - path: /
          pathType: Prefix
          backend:
            service:
              name: kubee-frontend
              port: 
                number: 80
